--- a/tez-tools/tez-javadoc-tools-base/pom.xml
+++ b/tez-tools/tez-javadoc-tools-base/pom.xml
@@ -22,7 +22,7 @@
     <artifactId>tez-tools</artifactId>
     <version>0.10.5-SNAPSHOT</version>
   </parent>
-  <artifactId>tez-javadoc-tools</artifactId>
+  <artifactId>tez-javadoc-tools-base</artifactId>
 
   <dependencies>
     <dependency>
@@ -43,69 +43,6 @@
     </dependency>
   </dependencies>
 
-  <profiles>
-    <profile>
-      <id>platform-macosx</id>
-      <activation>
-        <file>
-          <exists>${java.home}/../Classes/classes.jar</exists>
-        </file>
-      </activation>
-      <dependencies>
-        <dependency>
-          <groupId>com.sun</groupId>
-          <artifactId>tools</artifactId>
-          <version>${java.version}</version>
-          <scope>system</scope>
-          <systemPath>${java.home}/../Classes/classes.jar</systemPath>
-        </dependency>
-      </dependencies>
-    </profile>
-    <profile>
-      <id>other-os</id>
-      <activation>
-        <file>
-          <exists>${java.home}/../lib/tools.jar</exists>
-        </file>
-      </activation>
-      <dependencies>
-        <dependency>
-          <groupId>com.sun</groupId>
-          <artifactId>tools</artifactId>
-          <version>${java.version}</version>
-          <scope>system</scope>
-          <systemPath>${java.home}/../lib/tools.jar</systemPath>
-        </dependency>
-      </dependencies>
-    </profile>
-    <profile>
-      <id>jdk8-16</id>
-      <activation>
-        <jdk>[1.8,16]</jdk>
-      </activation>
-      <dependencies>
-        <dependency>
-          <groupId>org.apache.tez</groupId>
-          <artifactId>tez-javadoc-tools-base-jdk8</artifactId>
-          <version>${project.version}</version>
-        </dependency>
-    </dependencies>
-    </profile>
-    <profile>
-      <id>jdk17plus</id>
-      <activation>
-        <!-- JDK9 starts strong encapsulation of Java internals, JDK17 removes/hides those -->
-        <jdk>[17,)</jdk>
-      </activation>
-      <dependencies>
-        <dependency>
-          <groupId>org.apache.tez</groupId>
-          <artifactId>tez-javadoc-tools-base</artifactId>
-          <version>${project.version}</version>
-        </dependency>
-      </dependencies>
-    </profile>
-  </profiles>
 
 
   <build>
@@ -130,4 +67,32 @@
     </plugins>
   </build>
 
+  <!-- need to be take care of skipping this module's build under JDK17 if the user is in the current directory, -->
+  <!-- where the parent module's skip logic doesn't take affect -->
+  <profiles>
+    <profile>
+      <id>below-jdk-17</id>
+      <activation>
+        <jdk>(,17)</jdk>
+      </activation>
+       <build>
+         <plugins>
+           <plugin>
+           <groupId>org.apache.maven.plugins</groupId>
+           <artifactId>maven-compiler-plugin</artifactId>
+           <executions>
+             <execution>
+               <id>default-compile</id>
+                 <phase>none</phase>
+             </execution>
+             <execution>
+               <id>default-testCompile</id>
+               <phase>none</phase>
+              </execution>
+            </executions>
+            </plugin>
+          </plugins>
+        </build>
+    </profile>
+  </profiles>
 </project>
