--- a/tez-plugins/tez-aux-services/pom.xml
+++ b/tez-plugins/tez-aux-services/pom.xml
@@ -215,6 +215,7 @@
                 <filter>
                   <artifact>*:*</artifact>
                   <excludes>
+                    <exclude>javax/**</exclude>
                     <exclude>META-INF/*.SF</exclude>
                     <exclude>META-INF/*.DSA</exclude>
                     <exclude>META-INF/*.RSA</exclude>
@@ -240,15 +241,6 @@
                 <relocation>
                   <pattern>io.netty</pattern>
                   <shadedPattern>org.apache.tez.shaded.$0</shadedPattern>
-                </relocation>
-                <relocation>
-                  <pattern>javax</pattern>
-                  <shadedPattern>org.apache.tez.shaded.$0</shadedPattern>
-                  <excludes>
-                    <exclude>javax.crypto.*</exclude>
-                    <exclude>javax.security.**</exclude>
-                    <exclude>javax.net.**</exclude>
-                  </excludes>
                 </relocation>
               </relocations>
             </configuration>
