--- a/tez-api/pom.xml
+++ b/tez-api/pom.xml
@@ -119,6 +119,10 @@
       <artifactId>bcprov-jdk18on</artifactId>
       <scope>test</scope>
     </dependency>
+    <dependency>
+        <groupId>org.xerial.snappy</groupId>
+        <artifactId>snappy-java</artifactId>
+    </dependency>
   </dependencies>
 
   <build>
