added TODO for TEZ-4597

--- a/pom.xml
+++ b/pom.xml
@@ -1385,6 +1385,7 @@
     </profile>
   </profiles>
 
+  <!-- TODO: TEZ-4597: IncludePublicAnnotationsStandardDoclet is not JDK9+ compatible -->
   <reporting>
     <plugins>
       <plugin>
