TEZ-4608: Remove appender EventCounter from tez-container-log4j.properties

--- a/tez-dag/src/main/resources/tez-container-log4j.properties
+++ b/tez-dag/src/main/resources/tez-container-log4j.properties
@@ -15,7 +15,7 @@
 tez.root.logger=INFO,CLA
 
 # Define the root logger to the system property "tez.root.logger".
-log4j.rootLogger=${tez.root.logger}, EventCounter
+log4j.rootLogger=${tez.root.logger}
 
 # Logging Threshold
 log4j.threshold=ALL
@@ -29,12 +29,6 @@ log4j.appender.CLA.containerLogDir=${yarn.app.container.log.dir}
 
 log4j.appender.CLA.layout=org.apache.log4j.PatternLayout
 log4j.appender.CLA.layout.ConversionPattern=%d{ISO8601} [%p] [%t] |%c{2}|: %m%n
-
-#
-# Event Counter Appender
-# Sends counts of logging messages at different severity levels to Hadoop Metrics.
-#
-log4j.appender.EventCounter=org.apache.hadoop.log.metrics.EventCounter
 
 # Disable loggers which log a lot, use this if you want to reduce the log sizes. This will affect
 # the analyzer since it relies on these log lines.
