--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,7 +27,7 @@ jobs:
   build:
     strategy:
       matrix:
-        java-version: [8, 11, 17]
+        java-version: [17] # WIP:revert this
         os: [ubuntu-latest, macos-latest]
     runs-on: ${{ matrix.os }}
     steps:
