TEZ-4620: JDK17: test failures(NPE) in tez-dag module

--- a/pom.xml
+++ b/pom.xml
@@ -930,6 +930,7 @@
             <argLine>
               --add-opens=java.base/java.lang=ALL-UNNAMED
               --add-opens=java.base/java.util=ALL-UNNAMED
+              --add-opens java.base/java.io=ALL-UNNAMED
             </argLine>
             <testFailureIgnore>true</testFailureIgnore>
             <environmentVariables>
