--- a/pom.xml
+++ b/pom.xml
@@ -1128,6 +1128,7 @@
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>findbugs-maven-plugin</artifactId>
         <configuration>
+          <skip>true</skip>
           <excludeFilterFile>${basedir}/findbugs-exclude.xml</excludeFilterFile>
         </configuration>
       </plugin>
@@ -1243,6 +1244,7 @@
               </execution>
             </executions>
             <configuration>
+              <skip>true</skip>
               <excludeFilterFile>${basedir}/findbugs-exclude.xml</excludeFilterFile>
             </configuration>
           </plugin>
@@ -1254,6 +1256,7 @@
             <groupId>org.codehaus.mojo</groupId>
             <artifactId>findbugs-maven-plugin</artifactId>
             <configuration>
+              <skip>true</skip>
               <formats>
                 <format>xml</format>
                 <format>html</format>
