TEZ-4014: Allow DAGAppMaster to read configuration from plaintext

--- a/pom.xml
+++ b/pom.xml
@@ -898,6 +898,7 @@
           <artifactId>apache-rat-plugin</artifactId>
           <configuration>
             <excludes>
+              <exclude>**/*.json</exclude>
               <exclude>CHANGES.txt</exclude>
               <exclude>**/LICENSE*</exclude>
               <!-- IDE files -->
