--- a/pom.xml
+++ b/pom.xml
@@ -1058,7 +1058,7 @@
         </plugin>
       </plugins>
     </pluginManagement>
-
+    <!-- Do not review: Added for  checking the precommits with jdk17 after merge-->
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
