--- a/pom.xml
+++ b/pom.xml
@@ -88,7 +88,7 @@
     <maven-shade-plugin.version>3.6.0</maven-shade-plugin.version>
     <maven-site-plugin.version>3.12.1</maven-site-plugin.version>
     <metrics-core.version>3.1.0</metrics-core.version>
-    <mockito-core.version>4.3.1</mockito-core.version>
+    <mockito-core.version>4.8.1</mockito-core.version>
     <netty.version>4.1.116.Final</netty.version>
     <pig.version>0.13.0</pig.version>
     <protobuf.version>3.25.5</protobuf.version>
@@ -106,6 +106,7 @@
       --add-opens=java.base/java.lang=ALL-UNNAMED
       --add-opens=java.base/java.util=ALL-UNNAMED
       --add-opens java.base/java.io=ALL-UNNAMED
+      -Dnet.bytebuddy.experimental=true
     </test.jvm.args>
 
     <maven.javadoc.skip>true</maven.javadoc.skip> <!-- enabled only in relevant modules separately -->
