--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,7 @@
     <maven-project-info-reports-plugin.version>3.1.2</maven-project-info-reports-plugin.version>
     <maven-shade-plugin.version>3.6.0</maven-shade-plugin.version>
     <maven-site-plugin.version>3.12.1</maven-site-plugin.version>
+    <spotless-maven-plugin.version>2.46.1</spotless-maven-plugin.version>
     <metrics-core.version>3.1.0</metrics-core.version>
     <mockito-core.version>4.8.1</mockito-core.version>
     <netty.version>4.1.116.Final</netty.version>
@@ -997,9 +998,8 @@
         <plugin>
           <groupId>com.diffplug.spotless</groupId>
           <artifactId>spotless-maven-plugin</artifactId>
-          <version>2.43.0</version>
+          <version>${spotless-maven-plugin.version}</version>
           <configuration>
-            <failOnViolation>true</failOnViolation>
             <java>
               <importOrder>
                 <order>java,javax,org.apache,com,net,io</order>
