TEZ-4648: Upgrade jersey to 2.x

--- a/tez-api/pom.xml
+++ b/tez-api/pom.xml
@@ -91,12 +91,12 @@
      <artifactId>junit</artifactId>
     </dependency>
     <dependency>
-      <groupId>com.sun.jersey</groupId>
+      <groupId>org.glassfish.jersey.core</groupId>
       <artifactId>jersey-client</artifactId>
     </dependency>
     <dependency>
-      <groupId>com.sun.jersey</groupId>
-      <artifactId>jersey-json</artifactId>
+      <groupId>org.glassfish.jersey.media</groupId>
+      <artifactId>jersey-media-json-jackson</artifactId>
     </dependency>
     <dependency>
       <groupId>org.apache.hadoop</groupId>
