--- a/tez-api/pom.xml
+++ b/tez-api/pom.xml
@@ -76,7 +76,6 @@
     <dependency>
       <groupId>org.apache.hadoop</groupId>
       <artifactId>hadoop-registry</artifactId>
-      <version>${hadoop.version}</version>
     </dependency>
     <dependency>
      <groupId>org.apache.commons</groupId>
@@ -123,6 +122,11 @@
     <dependency>
         <groupId>org.xerial.snappy</groupId>
         <artifactId>snappy-java</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.curator</groupId>
+      <artifactId>curator-test</artifactId>
+      <scope>test</scope>
     </dependency>
   </dependencies>
 
