TEZ-4687: Spotless: enforce endWithNewline

--- a/pom.xml
+++ b/pom.xml
@@ -1036,6 +1036,7 @@
               </importOrder>
               <removeUnusedImports/>
               <trimTrailingWhitespace/>
+              <endWithNewline/>
             </java>
           </configuration>
         </plugin>
