--- a/tez-dist/src/docker/tez.env
+++ b/tez-dist/src/docker/tez.env
@@ -17,13 +17,16 @@
 
 # Tez AM Container Environment Configuration
 
-HADOOP_USER_NAME=tez
-USER=tez
 CONTAINER_ID=container_1700000000000_0001_01_000001
+USER=tez
+HADOOP_USER_NAME=tez
 NM_HOST=localhost
 NM_PORT=12345
 NM_HTTP_PORT=8042
+LOG_DIRS=/opt/tez/logs
 TEZ_FRAMEWORK_MODE=STANDALONE_ZOOKEEPER
-# TEZ_CUSTOM_CONF_DIR=/opt/tez/custom-conf
+TEZ_CUSTOM_CONF_DIR=/opt/tez/custom-conf
+# TEZ_AM_HEAP_OPTS configures the maximum heap size (Xmx) for the Tez AM.
+TEZ_AM_HEAP_OPTS=-Xmx2048m
 # Enable remote debugging on port 5005
-#JAVA_TOOL_OPTIONS='-agentlib:jdwp=transport=dt_socket,server=y,suspend=y,address=*:5005'
+# JAVA_TOOL_OPTIONS='-agentlib:jdwp=transport=dt_socket,server=y,suspend=y,address=*:5005'
